  list automatically, and clicking "Reload" selects the next buffer.
  This improves usability.

- Added Alt-key mnemonics to "Files Changed" dialog box
  (Ollie Rutherfurd).

- Alternative caret movement shortcuts (A+a,i,j,k,l,q,x,z) now work
  together with Shift to extend the selection.

- "Using jEdit" section of the jEdit user's guide is now mostly up to
  date for jEdit 4.2.

}}}
{{{ Syntax Highlighting

- Lua syntax highlighting (Philipp Janda)

- SMI-MIB syntax highlighting (Scott Allen).

- Updated Lisp syntax highlighting (Ollie Rutherfurd).

- Added Swig and PSP syntax highlighting (Ollie Rutherfurd).

- Added Poplog-11 syntax highlighting (David Moss).

}}}
{{{ Bug Fixes

- Fixed NullPointerException in FileCellRenderer if a VFS.DirectoryEntry
  had a null symlinkPath (which should not be the case anyway).

- Fixed the roots: VFS to return non-null symlinkPaths.

- "Go to Last Visible Line" went one line too far if the last visible
  line was only partially visible.

- "Remove" button in Tool Bar pane of the Global Options dialog box now
  selects the next item after removing the currently selected item.

- Changing the view layout in the View pane of the Global Options dialog
  box did not take effect for currently opened views.

- Fixed a few dockable window layout problems.

- Fix for numeric keypad not working after switch virtual desktops with
  various keyboard sequences on Linux.

- Fixed a performance regression -- the entire text area was being
  repainted on every edit.

- apacheconf.xml in 4.2pre7 distribution was corrupted.

- New files no longer appear in the perspective if the autosave task
  runs while the "Close Files" dialog box is showing.

- Delete perspective.xml before saving it so that past versions don't
  accumulate on OpenVMS.

- Fixed MiscUtilities.isAbsolutePath() on OpenVMS.

- It was not possible to bind an action to S+SPACE.

- Key event workaround code now uses the time when an event was fired,