@@ -586,7 +586,7 @@
         url="http://lists.sourceforge.net/lists/listinfo/jedit-announce">
         jedit-announce</ulink> or <ulink
         url="http://lists.sourceforge.net/lists/listinfo/jedit-users">
-        jedit-users</ulink> mailing lists, you will receive a email whenever
+        jedit-users</ulink> mailing lists, you will receive an email whenever
         a new release of jEdit becomes available.
       </para></answer>
     </qandaentry>
